// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`current user actions change password 1`] = `
[
  {
    "type": "CHANGE_PASSWORD_START",
  },
  {
    "resp": {
      "new_password": "newPassword",
      "old_password": "password",
    },
    "type": "CHANGE_PASSWORD_SUCCESS",
  },
]
`;

exports[`current user actions handle2FAEnforced() should display the banner 1`] = `
[
  [
    {
      "actionHTML": "<span class="d-inline-flex align-items-baseline">
                             <span class="text-primary">Setup 2FA</span>
                         </span>",
      "dismissible": false,
      "id": "two-fa-setup-required-banner",
      "message": "Action required: your admin requires you to enable Two-Factor Authentication (2FA) before 05/26/2022.",
      "onClick": [Function],
      "showIcon": true,
      "status": "warning",
      "style": "banner",
    },
  ],
]
`;

exports[`current user actions setIsAvailable() should dispatch with status 1`] = `
[
  {
    "payload": true,
    "type": "SET_IS_AVAILABLE",
  },
]
`;

exports[`current user actions setIsAvailable() should dispatch with status 2`] = `
[
  {
    "payload": false,
    "type": "SET_IS_AVAILABLE",
  },
]
`;

exports[`current user actions submit setting creation 1`] = `
[
  {
    "settingType": "macro",
    "type": "SUBMIT_SETTING_START",
  },
  {
    "isUpdate": false,
    "resp": {
      "data": {},
      "id": 1,
      "type": "macro",
    },
    "settingType": "macro",
    "type": "SUBMIT_SETTING_SUCCESS",
  },
]
`;

exports[`current user actions submit setting update 1`] = `
[
  {
    "settingType": "macro",
    "type": "SUBMIT_SETTING_START",
  },
  {
    "isUpdate": true,
    "resp": {
      "data": {},
      "id": 1,
      "type": "macro",
    },
    "settingType": "macro",
    "type": "SUBMIT_SETTING_SUCCESS",
  },
]
`;

exports[`current user actions submitSettingSuccess should dispatch the next setting 1`] = `
[
  {
    "isUpdate": true,
    "resp": {
      "data": {
        "1": {
          "display_order": 2,
          "hide": false,
        },
      },
      "id": 1,
      "type": "ticket-views",
    },
    "settingType": "ticket-views",
    "type": "SUBMIT_SETTING_SUCCESS",
  },
]
`;

exports[`current user actions update2FAEnabled should dispatch when the status is the same 1`] = `
[
  {
    "status": true,
    "type": "UPDATE_2FA_STATUS",
  },
]
`;

exports[`current user actions update2FAEnabled should dispatch with status 1`] = `
[
  {
    "status": true,
    "type": "UPDATE_2FA_STATUS",
  },
]
`;

exports[`current user actions update2FAEnabled should dispatch with status 2`] = `
[
  {
    "status": false,
    "type": "UPDATE_2FA_STATUS",
  },
]
`;
